<resources>
    <string name="app_name">NSS</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_skip">Skip for now</string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_name">"Fullname"</string>
    <string name="prompt_contact">Phone number</string>
    <string name="action_submit">Submit</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="small"></string>

</resources>
